[package]
name = "ad-ldap-walk"
version = "0.1.0"
authors = ["Scott Hutton <shutton@pobox.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
async-recursion = "0.3.1"
chrono = "0.4.19"
env_logger = "0.8.1"
itertools = "0.9.0"
ldap3 = "0.8.0"
log = "0.4.11"
rpassword = "5.0.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = { version = "0.3.20", default-features = false }
tokio = { version = "0.3.3", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.0.0"
